 # Fixed issue [#21327] Cannot edit more than one thing at a time (Amy Stephen).
 # Fixed issue [#22178] When 'No Editor' is selected for user, HTML still re-formats when a file is saved (dani shap, Ian MacLennan, Hannes Papenberg, Elin Waring).
 
28-Oct-2010 Mark Dexter
 # [#22878] Contact menu items don't work correctly with published state of contacts and contact categories

28-Oct-2010 Jean-Marie Simonet
 # [#21910] installation of module does not create module listing. Thanks Dennis and Troy.
 # [#23031] RTL fix for display of menus in menu assignments. Thanks Andrea.
 # [#22994] Contacts metadata options - registry errors. Thanks Andrew.
 # [#23037] TinyMCE resizing settings. Thanks Dennis.
 # [#23040] Right arrows aren't vertically centered in "Permissions setting". Thanks Dennis.
 ^ Updating pending and expired old 1.5 icons to new format (Temp)
 
28-Oct-2010 Andrew Eddie
 # Fixed issue [#23041] Incorrect testing for variable is an instance of a class (marius van rijnsoever).
 # Fixed issue [#23032] Help system is generating incorrect URLs (Chris Davenport, Dennis Hermacki).
 # Fixed issue [#23030] Bluestork Menu Model Assignments modal is closing immediately upon display (Andrea Tarr, Dennis Hermacki).
 # Fixed issue [#23039] Cross site scripting Revision 19231 (Ervis Tusha, Ian MacLennan).
 # Fixed issue [#23036] Undefined property: stdClass::$cachable in \libraries\joomla\environment\response.php on line 49 (Dennis Hermacki).
 # Fixed issue [#22677] The treatment of the componentlayout parameter in categories is incorrect (Elin Waring).

27-Oct-2010 Jean-Marie Simonet
 # [#23002] jgrid.published does not show all possible statuses as was shown in 1.5. Thanks Dennis.
 # [#23018] Clean up Legacy() method from content/contact helpers. Thanks Louis.
 # Missing RTL css in bluestork.
 # [#22619] SEF issue with mod_rewrite on when period in the alias.
 
26-Oct-2010 Ian MacLennan